# analysis-rmi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp  requirements.txt
experiments/: CMakeLists.txt  index_comparison.cpp  rmi_build.cpp  rmi_errors.cpp  rmi_guideline.cpp  rmi_intervals.cpp  rmi_lookup.cpp  rmi_segmentation.cpp
include/rmi/: models.hpp  rmi.hpp
include/rmi/util/: fn.hpp  search.hpp
results/: index_comparison.csv  rmi_build.csv  rmi_errors.csv  rmi_guideline.csv  rmi_intervals.csv  rmi_lookup.csv  rmi_segmentation.csv
scripts/: plot_index_comparison.py  plot_rmi_build.py  plot_rmi_errors.py  plot_rmi_guideline.py  plot_rmi_intervals.py  plot_rmi_lookup.py  plot_rmi_segmentation.py  run_index_comparison.sh  run_rmi_build.sh  run_rmi_errors.sh  run_rmi_intervals.sh  run_rmi_lookup.sh  run_rmi_segmentation.sh
